--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This file was created by IntelliJ IDEA 12.0.2 for binding GitHub repository
+Random experiments using Scala parser combinators to parse SQL
